@@ -1,5 +1,8 @@
 2001-07-25  Rodrigo Moya <rodrigo@gnome-db.org>
 
+	* gda-xml-document.c (gda_xml_document_get_compress_mode):
+	(gda_xml_document_set_compress_mode): new functions
+
 	* gda-util.c (gda_util_hash_to_list): add g_strdup'ed value to the
 	returned GList
 
